# niw-stats-from-reddit-dashboard

./: .gitignore  LICENSE.md  Makefile  README.md  compute.sh  index.html  pyproject.toml  serve.sh  snapshot.json
.claude/: launch.json
.github/workflows/: ci.yml
assets/: index-Blcou0lj.css  index-C1LAlvkZ.css  index-CpBBD8pt.js  index-dZqw4DfH.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ApprovalRateByGroupChart.tsx  ChartCard.test.tsx  ChartCard.tsx  DataQuality.test.tsx  DataQuality.tsx  DistributionChart.tsx  FilterBar.tsx  PostList.test.tsx  PostList.tsx  StatCards.tsx  TimeRangeSelector.test.tsx  TimeRangeSelector.tsx  TimeSeriesChart.tsx
frontend/src/lib/: aggregate.test.ts  aggregate.ts  colors.ts  csv.ts
scripts/: com.niw.publish.plist.example  com.niw.refresh.plist.example  pii_audit.py  publish.sh
src/niw_stats/: __init__.py  cli.py  config.py  models.py
src/niw_stats/api/: __init__.py  app.py  deps.py  routes.py
src/niw_stats/classify/: __init__.py  base.py  cli_backend.py  json_extract.py  mock_backend.py  prompt.py  reporter.py  service.py  taxonomy.py
src/niw_stats/db/: schema.sql  (+3 more)
tests/: conftest.py  test_aggregate.py  test_api.py  test_classify_service.py  test_cli_backend.py  test_cli_status.py  test_cursor.py  test_db.py  test_dump_loader.py  test_ingest_service.py  test_json_extract.py  test_models_nullvszero.py  test_prefilter.py  test_snapshot.py  test_taxonomy.py
tests/fixtures/: dump_slice.jsonl
(+11 files in other folders)
