[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "niw-stats"
version = "0.1.0"
description = "Pull, classify, and visualize r/EB2_NIW approval/denial data points"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "certifi",
    "zstandard>=0.22",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "respx>=0.21",
    "ruff",
    "mypy",
]

[project.scripts]
niw = "niw_stats.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
niw_stats = ["db/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error::DeprecationWarning:niw_stats"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI Depends() / typer Option() are intentionally called in arg defaults.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.10"
packages = ["niw_stats"]
ignore_missing_imports = true
